# practicas_computacion_distribuida

./: .gitignore  README.md  pyproject.toml
Practica 0/: Ejercicio.c  Practica0.md
Practica 1/: README.md  bfs_secuencial.py  grafica.json
Practica 2/: Nodo.py  NodoBroadcast.py  NodoGenerador.py  NodoVecinos.py  README.md  test.py
Practica 2/Canales/: Canal.py  CanalBroadcast.py
Practica 3/: README.md
Practica 3/src/: Nodo.py  NodoBFS.py  NodoDFS.py  Test.py
Practica 4/: .gitignore  README.md
Practica 4/src/: Nodo.py  NodoConsenso.py  Test.py
Practica 4/src/Canales/: Canal.py  CanalRecorridos.py
Practica 5/: README.md
Practica 5/src/: NodoBroadcast.py  NodoDFS.py  test.py
